--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,9 @@ input {
 }
 
 .join-meeting {
-    /*background: #EDF4FB; */
-    background: #c4b52f;
+   // background: #EDF4FB; 
+	background: #eaebf9;
+   
     padding: 60px;
     text-align: center;
     border: 1px solid rgba(0,0,0,0.1);
@@ -62,6 +63,7 @@ input {
 
 .join-meeting .button { 
 	margin-bottom:20px;
+	background: #c4b52f;
 }
 
 .input-center{
