--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ input {
 }
 
 .join-meeting {
-   // background: #EDF4FB; 
+   /* background: #EDF4FB; */
 	background: #eaebf9;
    
     padding: 60px;
